--- a/css/terms-style.css
+++ b/css/terms-style.css
@@ -19,6 +19,7 @@
     display: block;
     word-wrap: break-word;
     max-width: fit-content;
+    font-size: 14px;
   }
   
   .terms-box{
@@ -47,7 +48,7 @@
   
   
   .terms-container {
-    max-width: 1000px;
+    max-width: 1030px;
     width: 100%;
     margin: 30px auto;
     padding: 0 40px;
